# common_utils

./: .gitignore  CMakeLists.txt
assigned_variable/: av_serialize.hpp  c_assigned_value.hpp
containers/: array_common.hpp  hash_unique.h
cryst_tools/: comb_points.cpp  comb_points.h  cryst_tools.cpp  cryst_tools.h
obabel/: eigen2babel.h  obabel_utils.cpp  obabel_utils.h
others/: conv_types.cpp  conv_types.h  rnd_utils.cpp  rnd_utils.h  string_utils.cpp
scanf_pp/: base.hpp
science/: combinatorics.h  expc.hpp  math_utils.cpp
tests/: CMakeLists.txt  create_test_combinatorics.py  test_comb_points.cpp  test_combinatorics.cpp  test_cryst_tools.cpp  test_expc.cpp  test_rnd.cpp  test_str.cpp
tests/data_cryst_tools/: 1000041.cif  1200013.cif  1200014.cif  1200021.cif  5900001.cif  5900027_1.cif  5900037.cif  7021036.cif  7021095.cif  7021124.cif
